Fixed notification dropdown overflow

--- a/public/css/sections/main.styl
+++ b/public/css/sections/main.styl
@@ -130,14 +130,16 @@ header {
                 }
               }
             }
-            > ul {
+            .arrow {
               background: url(../img/arrow_notifications.png) center top no-repeat;
+              height: 6px;
+              margin-top: -6px;
+            }
+            > ul {
               height: inherit;
               line-height: inherit;
               max-height: 200px;
               overflow: auto;
-              padding: 6px 0 0;
-              margin-top: -6px;
               box-shadow: basicBoxShadow;
               > li {
                 width: 100%;
